paperless/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  labels:
    app.kubernetes.io/version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
        app.kubernetes.io/version: v1
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: paperless-data
              mountPath: /usr/src/paperless/data
              subPath: data
            - name: paperless-data
              mountPath: /usr/src/paperless/media
              subPath: media
            - name: paperless-data
              mountPath: /usr/src/paperless/consume
              subPath: consume
            - name: paperless-data
              mountPath: /usr/src/paperless/export
              subPath: export
      volumes:
        - name: paperless-data
          persistentVolumeClaim:
            claimName: paperless-pvc
