paperless/service.yml
apiVersion: v1
kind: Service
metadata:
  name: paperless-service
spec:
  selector:
    app: paperless
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
